# prose-check

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prose-check.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  PROJECT.yaml  README.md  check_writing.py  install-skills.sh  pyproject.toml  requirements.txt  run_pipeline.py
.claude/skills/bibliography/: AUDIT_REPORT_TEMPLATE.md  CITATION_FORMATS.md  REFERENCE_STYLES.md  SKILL.md
.claude/skills/human-writing/: SKILL.md  statistics.md
.claude/skills/manuscript-writing/: ABSTRACT_TEMPLATES.md  IMRAD_STRUCTURE.md  SECTION_TRANSITIONS.md  SKILL.md
.claude/skills/revision-workflow/: CHANGE_TRACKING.md  COMMON_REVIEWER_CONCERNS.md  RESPONSE_TEMPLATES.md  SKILL.md
.claude/skills/scientific-figures/: PROMPT_TEMPLATES.md  REVIEW_CRITERIA.md  SKILL.md
.claude/skills/scientific-figures/scripts/: generate_figure.py
.claude/skills/scientific-style/: CITATION_PATTERNS.md  HEDGING_AND_CLAIMS.md  SKILL.md
.claude/skills/submission-prep/: COVER_LETTER_TEMPLATES.md  FIGURE_TABLE_GUIDELINES.md  SKILL.md  SUBMISSION_CHECKLIST.md
.github/workflows/: prose-check.yml
docs/: methodology.md
results/: markers.json  model_comparison.json  model_comparison.md  styleguide.md
src/: __init__.py  analyze.py  compare.py  fetch_human_corpus.py  generate_prompts.py  generate_samples.py  report.py
tests/: __init__.py  test_check_writing.py  test_pipeline.py
